# CollectDataSwitchBot

./: .gitignore  README.md  docker-compose.yml  note.md  pyproject.toml  samconfig.toml  template.yaml
app/src/: lambda_handler.py  lambda_handler_schedule_get_device.py
app/src/infrastructure/data_store/: _client.py  device.py  weather.py
app/src/infrastructure/open_weather/: _session.py  current_weather.py
app/src/infrastructure/secret/: switchbot.py
app/src/infrastructure/switchbot/: _session.py  device.py
