[project]
name = "collectdataswitchbot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "requests (==2.32.3)",
    "aws-lambda-powertools (==3.10.0)",
    "boto3 (==1.37.30)",
    "pydantic (==2.11.3)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
